# ahoy

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  ahoy_config.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
docs/: README.ko.md
docs/research-report/: SUMMARY.md  adversarial-review-report.md  agent-eval-harness-report.md  agent-guardrails-template-report.md  agent-orchestrator-report.md  agentic-guardrails-report.md  agentic-sprint-report.md  agentspec-report.md  aragora-report.md  atlas-guardrails-report.md  attractor-report.md  ccmanager-report.md  claude-code-harness-report.md  claude-octopus-report.md  claudekit-report.md  coding-agent-eval-report.md  deepagents-report.md  deepeval-report.md  duh-consensus-engine-report.md  dwarvesf-claude-guardrails-report.md  everything-claude-code-report.md  evoagentx-report.md  github-agentic-workflows-report.md  github-spec-kit-report.md  gstack-report.md  hal-harness-report.md  hive-report.md  invariant-guardrails-report.md  langchain-open-swe-report.md  liza-report.md  magis-framework-report.md  massgen-report.md  metaswarm-report.md  nemo-guardrails-report.md  oh-my-pi-report.md  (+19 more)
hooks/: hooks.json
scripts/: doctor.py  eval_dispatch.py  review_diff.py  validate_harness.py
templates/: eval_report_template.md  handoff_template.md  spec_template.md  sprint_contract_template.md
tests/: conftest.py  test_doctor.py  test_e2e_integration.py  test_eval_dispatch.py  test_review_diff.py  test_review_diff_skill.py  test_sensitive_masking.py  test_validate_harness.py
(+6 files in other folders)
