[project]
name = "ahoy"
version = "0.1.1"
description = "Agent Harness for Orchestrated Yielding"
requires-python = ">=3.12"

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=scripts --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
branch = true
source = ["scripts"]

[tool.coverage.report]
show_missing = true
skip_covered = false
